--- a/index.html
+++ b/index.html
@@ -11,5 +11,16 @@
     <script src="akan.css"></script>
     <title>Akan Project</title>
 </head>
+<body>
+    <div class = container> 
+        <div class="jumbotron"> 
+            <h1>A  K  A  N</h1>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">What is Akan</h3>
+            </div> 
+        </div>
+   
 
 </html>
