--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
                 <h3 class="panel-title">What is Akan</h3>
             </div> 
         </div>
-   
+        <div class="panel-body">
+            <p>Akan is a site that helps to know which day of the week you were born,given the date, month and year</p>
+            <form class="form-horizontal">
+                <div class="panel-body">
+                    <label for="dob">   Date of Birth</label>
+                    <input type="date" id="dob"/>
+                    <select id="list">
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                    </select>
+                    <button type="submit">Submit</button>
+                </div>
+                <div class="panel-footer">
+                    <p>@ Ogenergy Design</p>
+                </div>
+            </form>
+        </div>
+    </div>
+</body> 
 
 </html>
