--- a/index.html
+++ b/index.html
@@ -2,41 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="akan.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="akan.js"></script>
-    <script src="akan.css"></script>
+    
     <title>Akan Project</title>
 </head>
 <body>
-    <div class = container> 
-        <div class="jumbotron"> 
+    <div class = "container jumbotron"> 
+        <div class="row bg-danger"> 
             <h1>A  K  A  N</h1>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
+        <div class="panel panel-info">
+            <div class="panel panel-default">
+                <div class="panel-heading">
                 <h3 class="panel-title">What is Akan</h3>
-            </div> 
-        </div>
-        <div class="panel-body">
-            <p>Akan is a site that helps to know which day of the week you were born,given the date, month and year</p>
-            <form class="form-horizontal">
-                <div class="panel-body">
-                    <label for="dob">   Date of Birth</label>
-                    <input type="date" id="dob"/>
-                    <select id="list">
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                    </select>
-                    <button type="submit">Submit</button>
-                </div>
-                <div class="panel-footer">
-                    <p>@ Ogenergy Design</p>
-                </div>
-            </form>
+                </div> 
+            </div>
+            <div class="panel-body">
+                <p>Akan is a site that helps to know which day of the week you were born,given the date, month and year<br> and the displays the name due to you based on your day of birth.<br> TRY</p>
+                <form class="form-horizontal">
+                    <div class="panel-body">
+                        <label for="dob">Date of Birth</label>
+                        <input type="date" id="dob" name="dob"> 
+                    <select id="list"> 
+                            <option value="female" name="female">Female</option>
+                            <option value="male" name="male">Male</option> 
+                            <div id="list"></div>
+                        </select>
+                        <button type="button" value="submit" class="btn-primary btn-lg" onclick="akan();">Submit</button>
+
+                    </div>
+                    <div class="panel-footer">
+                        <p> @ Ogenergy Design</p>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </body> 
